@@ -100,10 +100,8 @@ static struct option const longopts[] = {
     {"reconnect", no_argument, NULL, 19},
     {"timeout", required_argument, NULL, 20},
     {"noshutter", no_argument, NULL, 21},
-#ifndef WIN32
     {"servermode", no_argument, NULL, 22},
     {"servermode_timeout", required_argument, NULL, 23},
-#endif
     {"pentax_debug_mode", required_argument, NULL,24},
     {"dangerous", no_argument, NULL, 25},
     {"read_datetime", no_argument, NULL, 26},
@@ -415,11 +413,8 @@ int main(int argc, char **argv) {
     struct timeval prev_time;
     struct timeval current_time;
     bool noshutter = false;
-#ifndef WIN32
     bool servermode = false;
     int servermode_timeout = 30;
-#endif
-
     int modify_debug_mode=0;
     char debug_mode=0;
     bool dangerous=0;
@@ -727,7 +722,6 @@ int main(int argc, char **argv) {
                 noshutter = true;
                 break;
 
-#ifndef WIN32
             case 22:
                 servermode = true;
                 break;
@@ -735,7 +729,6 @@ int main(int argc, char **argv) {
             case 23:
                 servermode_timeout = atoi(optarg);
                 break;
-#endif
 
             case 24:
                 modify_debug_mode=1;
@@ -783,13 +776,16 @@ int main(int argc, char **argv) {
         }
     }
 
-#ifndef WIN32
     if ( servermode ) {
+#ifndef WIN32
         // ignore all the other argument and go to server mode
         servermode_socket(servermode_timeout);
         exit(0);
-    }
+#else
+        fprintf(stderr, "Servermode is not supported in Windows\n");
+        exit(-1);
 #endif
+    }
 
     if (!output_file && !output_file_stdout && frames > 0) {
         fprintf(stderr, "Should specify output filename (use '-o -' if you really want to output to stdout)\n");
