@@ -39,6 +39,7 @@ version 0.84.05
 	GUI Preview image bugfix
 	Filename extension bugfixes
 	Avoid double unrecognized option error message
+	Show error message if servermode is specified in Windows
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
